# graphenix

./: .gitignore  LICENSE  Makefile  RADME.md  README.md  analysis_runner.sh  cpp_tests.sh  main.py  setup.cfg  setup.py  test copy.py  test.cpp  test.py  test2.py  tests.py
.github/workflows/: main.yml
analysis/: stats_graph1.py
analysis/agg/: alchemy_mysql.py  alchemy_sqlite.py  graph.py  graphenix.py  raw_mysql.py  raw_sqlite.py
analysis/clustering/: sorting_single.cpp  stats_graph1.py
analysis/diffdistinsert/: data.py  graphenix_bulk.py  graphenix_bulk_index.py  mysql_bulk.py  mysql_bulk_index.py  raw_sqlite.py  raw_sqlite_index.py  run_insert.sh
analysis/find_index/: graphenix.py  raw_mysql.py  raw_sqlite.py
analysis/find_no_index/: graph.py  graph_old.py  graph_old2.py  graph_size.py  graph_size_single.py  graphenix.py  move_and_analyse.sh  raw_mysql.py  raw_sqlite.py
analysis/indexinsert/: alchemy_mysql.py  alchemy_sqlite.py  graph.py  graphenix.py  graphenix_bulk.py  mysql_bulk.py  raw_mysql.py  raw_sqlite.py
analysis/join/: alchemy_mysql.py  alchemy_sqlite.py  data.py  graph.py  graphenix.py  (+6 more)
benchmarking/: sqlite_test.py  testerino.c
core/: main.c  methods.c  methods.h  pyb.py  pybase.c  schema.h
docs/: base_diploma.tex  diploma.tex  linecount.sh  literatura.bib  predstavitev.tex
documentation/: IDEA.md
engine/: main.cpp  util.cpp
graphenix/: __init__.py  field.py  model.py  query.py  schema.py  searilize.py  searilizer.py  setup.py  view.py
src/: schema_engine.py
tests/: tests_base.py  tests_data.py  tests_perf.py  tests_unit.py
(+90 files in other folders)
