[metadata]
name = graphenix
description = Embeded database system for python written in C++
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/janezsedeljsak/graphenix
author = Janez Sedeljšak
license_files = LICENSE
platforms = unix
classifiers =
    Intended Audience :: Developers
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
download_url = https://github.com/janezsedeljsak/graphenix
project_urls =
    Source=https://github.com/janezsedeljsak/graphenix

[options]
python_requires = >=3.10

[flake8]
max_line_length = 100